--- a/resources/html/transaction_library.html
+++ b/resources/html/transaction_library.html
@@ -115,6 +115,7 @@
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
+            <th>Transaction Type</th> <!--The transaction type here is Addition or Removal-->
             <th>Transaction Name</th>
             <th>Made By</th>
             <th>Date</th>
@@ -132,11 +133,11 @@
     <script src="../js/database-operations.js"></script>
     <script src="../js/frontend-operations.js"></script>
     <script src="../js/library-operations.js"></script>
+    <script src="../js/filter.js"></script>
+    <script src="../js/search.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
-    <script src="../js/filter.js"></script>
-    <script src="../js/search.js"></script>
     <script src="../js/popup.js"></script>
     <script src="../js/app.js"></script>
   </body>
