--- a/resources/html/transactions_borrow.html
+++ b/resources/html/transactions_borrow.html
@@ -114,14 +114,12 @@
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
-            <th>Transaction Type</th>
+            <th>Transaction Type</th> <!--The transaction type here is Borrowed or Returned-->
             <th>Copy ID</th>
             <th>Book Title</th>
-            <th>Status</th>
+            <th>Condition</th>
             <th>Made By</th>
             <th>Date</th>
-            <th>Date Returned</th>
-            <th>Due Date</th>
           </tr>
         </thead>
       </table>
@@ -136,11 +134,11 @@
     <script src="../js/database-operations.js"></script>
     <script src="../js/frontend-operations.js"></script>
     <script src="../js/library-operations.js"></script>
+    <script src="../js/filter.js"></script>
+    <script src="../js/search.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
-    <script src="../js/filter.js"></script>
-    <script src="../js/search.js"></script>
     <script src="../js/popup.js"></script>
     <script src="../js/app.js"></script>
   </body>
