--- a/resources/html/students.html
+++ b/resources/html/students.html
@@ -119,6 +119,7 @@
         </ul>
       </div>
 
+      <div id="pager-top" class="d-flex align-self-md-center"></div>
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
@@ -131,9 +132,10 @@
             <th>Date Borrowed</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="studentsTableBody">
         </tbody>
       </table>
+      <div id="pager-bottom" class="d-flex align-self-md-center"></div>
       <button id="addStudentBtn" type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#addStudentContent">Add student Record</button>
 
       <div class="modal fade" id="addStudentContent" tabindex="-1">
@@ -198,24 +200,14 @@
                 />
               </div>
             </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary" onclick="addStudentToDB()">Save Student</button>
+            </div>
           </div>
         </div>
       </div>
 
-      <script>
-        document.addEventListener("DOMContentLoaded", () => {
-          const params = new URLSearchParams(window.location.search);
-          const modalId = params.get("modal");
-
-          if (modalId) {
-            const modalEl = document.getElementById(modalId);
-            if (modalEl) {
-              const modal = new bootstrap.Modal(modalEl);
-              modal.show();
-            }
-          }
-        });
-      </script>
     </main>
 
     <script src="../js/bootstrap.bundle.js"></script>
