--- a/resources/html/bookshelf-books.html
+++ b/resources/html/bookshelf-books.html
@@ -11,14 +11,14 @@
   </head>
   <body>
     <!-- SIDEBAR -->
-    <div class="sidebar">
+    <aside class="sidebar" role="navigation" aria-label="Main navigation">
       <nav class="nav flex-column">
-        <a href="./index.html" class="d-flex justify-content-center mb-5"
-          ><img src="../icons/appIcon.png" alt="Logo"
-        /></a>
-        <a class="nav-link mb-3" href="./index.html" aria-current="page">
+        <a href="./index.html" class="d-flex justify-content-center mb-5" aria-label="BCULMS Home">
+          <img src="../icons/appIcon.png" alt="BCULMS Logo" width="100" height="100">
+        </a>
+        <a class="nav-link mb-3" href="./index.html" aria-current="page" aria-label="Dashboard">
           <p></p>
-          <span class="icon">
+          <span class="icon" aria-hidden="true">
             <i class="bi bi-grid-1x2"></i>
           </span>
           <span class="description">Dashboard</span>
@@ -29,28 +29,29 @@
           data-bs-toggle="collapse"
           data-bs-target="#submenuBookshelf"
           role="button"
-          aria-expanded="false"
+          aria-expanded="true"
           aria-controls="submenuBookshelf"
+          aria-label="Bookshelf menu"
         >
           <p></p>
-          <span class="icon">
+          <span class="icon" aria-hidden="true">
             <i class="bi bi-book"></i>
           </span>
           <span class="description">
-            Bookshelf <i class="bi bi-caret-down"></i>
+            Bookshelf <i class="bi bi-caret-down" aria-hidden="true"></i>
           </span>
         </a>
         <div class="sub-menu expand mb-1" id="submenuBookshelf">
-          <a href="./bookshelf-books.html" class="nav-link mb-2 active">
+          <a href="./bookshelf-books.html" class="nav-link mb-2 active" aria-label="Books management">
             <p></p>
-            <span class="icon">
+            <span class="icon" aria-hidden="true">
               <i class="bi bi-book-fill"></i>
             </span>
             <span class="description">Books</span>
           </a>
-          <a href="./bookshelf-copies.html" class="nav-link mb-2">
+          <a href="./bookshelf-copies.html" class="nav-link mb-2" aria-label="Book copies management">
             <p></p>
-            <span class="icon">
+            <span class="icon" aria-hidden="true">
               <i class="bi bi-book-half"></i>
             </span>
             <span class="description">Copies</span>
@@ -102,69 +103,82 @@
     </div>
 
     <!-- MAIN -->
-
-    <main class="main-content d-flex flex-column">
-      <div id="image-container">
-        <img src="../images/bcu_building2.jpg" alt="" id="background" />
+    <main class="main-content" role="main">
+      <div id="image-container" aria-hidden="true">
+        <img src="../images/bcu_building2.jpg" alt="Bicol University Campus Building" id="background" />
       </div>
-      <h2>Books</h2>
-      <div class="btn-group align-self-md-end">
-        <button
-          class="btn btn-secondary dropdown-toggle"
-          type="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          Filter
-        </button>
-        <ul class="dropdown-menu" id="departmentFilter"></ul>
+      <header class="d-flex justify-content-between align-items-center mb-4">
+        <h1 class="display-6">Books Management</h1>
+        <div class="btn-group">
+          <button type="button"
+                  class="btn btn-secondary dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  aria-label="Filter books by department">
+            <i class="bi bi-funnel me-2" aria-hidden="true"></i>
+            Filter
+          </button>
+          <ul class="dropdown-menu" id="departmentFilter" aria-label="Department filter options"></ul>
+        </div>
+      </header>
+      
+      <div class="table-responsive">
+        <div id="pager-top" class="d-flex justify-content-center mb-3" role="navigation" aria-label="Top pagination"></div>
+        <table class="table table-striped table-hover align-middle" role="table" aria-label="Books catalog">
+          <thead class="table-light">
+            <tr>
+              <th scope="col">Book Title</th>
+              <th scope="col">Author</th>
+              <th scope="col">Publication Date</th>
+              <th scope="col">Department</th>
+              <th scope="col">Copies</th>
+            </tr>
+          </thead>
+          <tbody id="booksTableBody" role="rowgroup">
+            <tr>
+              <td colspan="5" class="text-center text-muted">
+                <i class="bi bi-book me-2" aria-hidden="true"></i>
+                Loading books...
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div id="pager-bottom" class="d-flex justify-content-center mt-3" role="navigation" aria-label="Bottom pagination"></div>
       </div>
-      <div id="pager-top" class="d-flex align-self-md-center"></div>
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr class="table-info">
-            <th>Book Title</th>
-            <th>Author</th>
-            <th>Publication Date</th>
-            <th>Department</th>
-            <th>Copies</th>
-          </tr>
-        </thead>
-        <tbody id="booksTableBody"></tbody>
-      </table>
-      <div id="pager-bottom" class="d-flex align-self-md-center"></div>
 
-      <button
-        id="addBookBtn"
-        type="button"
-        class="btn btn-info"
-        data-bs-toggle="modal"
-        data-bs-target="#addBookContent"
-      >
-        Add Books
+      <button type="button"
+              id="addBookBtn"
+              class="btn btn-primary position-fixed bottom-0 end-0 m-4 rounded-circle shadow-lg"
+              data-bs-toggle="modal"
+              data-bs-target="#addBookContent"
+              aria-label="Add new books to the library">
+        <i class="bi bi-plus-lg fs-4" aria-hidden="true"></i>
       </button>
 
-      <div class="modal fade" id="addBookContent" tabindex="-1">
+      <div class="modal fade" id="addBookContent" tabindex="-1" aria-labelledby="addBookModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
           <div class="modal-content">
-            <div class="modal-header bg-info text-white">
-              <h5 class="modal-title">Add Book</h5>
+            <div class="modal-header bg-primary text-white">
+              <h5 class="modal-title" id="addBookModalLabel">
+                <i class="bi bi-book me-2" aria-hidden="true"></i>
+                Add New Book
+              </h5>
               <button
                 type="button"
-                class="btn-close"
+                class="btn-close btn-close-white"
                 data-bs-dismiss="modal"
-                aria-label="Close"
+                aria-label="Close modal"
               ></button>
             </div>
             <div class="modal-header bg-light border-bottom">
-              <div class="btn-group" role="group">
+              <div class="btn-group" role="group" aria-label="Book addition mode">
                 <input type="radio" class="btn-check" name="addMode" id="singleMode" value="single" checked>
                 <label class="btn btn-outline-primary btn-sm" for="singleMode">Single Book</label>
                 <input type="radio" class="btn-check" name="addMode" id="bulkMode" value="bulk">
                 <label class="btn btn-outline-primary btn-sm" for="bulkMode">Bulk Add</label>
               </div>
               <div class="form-text ms-auto">
-                <small id="modeHelpText">Add books one at a time</small>
+                <small id="modeHelpText" aria-live="polite">Add books one at a time</small>
               </div>
             </div>
             <div class="modal-body">
