--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -10,20 +10,20 @@
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
   </head>
   <body>
-    <div id="loader">
+    <div id="loader" role="status" aria-live="polite">
       <div class="loader-box">
         <p id="loader-text">Loading assets...</p>
       </div>
     </div>
     <!-- SIDEBAR -->
-    <div class="sidebar">
+    <aside class="sidebar" role="navigation" aria-label="Main navigation">
       <nav class="nav flex-column">
-        <a href="./index.html" class="d-flex justify-content-center mb-5"
-          ><img src="../icons/appIcon.png" alt="Logo"
-        /></a>
-        <a class="nav-link mb-3 active" href="./index.html" aria-current="page">
+        <a href="./index.html" class="d-flex justify-content-center mb-5" aria-label="BCULMS Home">
+          <img src="../icons/appIcon.png" alt="BCULMS Logo" width="100" height="100">
+        </a>
+        <a class="nav-link mb-3 active" href="./index.html" aria-current="page" aria-label="Dashboard">
           <p></p>
-          <span class="icon">
+          <span class="icon" aria-hidden="true">
             <i class="bi bi-grid-1x2"></i>
           </span>
           <span class="description">Dashboard</span>
@@ -36,26 +36,27 @@
           role="button"
           aria-expanded="false"
           aria-controls="submenuBookshelf"
+          aria-label="Bookshelf menu"
         >
-          <p></p>
-          <span class="icon">
+        <p></p>
+          <span class="icon" aria-hidden="true">
             <i class="bi bi-book"></i>
           </span>
           <span class="description">
-            Bookshelf <i class="bi bi-caret-down"></i>
+            Bookshelf <i class="bi bi-caret-down" aria-hidden="true"></i>
           </span>
         </a>
         <div class="sub-menu collapse mb-1" id="submenuBookshelf">
-          <a href="./bookshelf-books.html" class="nav-link mb-2">
+          <a href="./bookshelf-books.html" class="nav-link mb-2" aria-label="Books management">
             <p></p>
-            <span class="icon">
+            <span class="icon" aria-hidden="true">
               <i class="bi bi-book-fill"></i>
             </span>
             <span class="description">Books</span>
           </a>
-          <a href="./bookshelf-copies.html" class="nav-link mb-2">
+          <a href="./bookshelf-copies.html" class="nav-link mb-2" aria-label="Book copies management">
             <p></p>
-            <span class="icon">
+            <span class="icon" aria-hidden="true">
               <i class="bi bi-book-half"></i>
             </span>
             <span class="description">Copies</span>
@@ -107,63 +108,50 @@
     </div>
 
     <!-- MAIN -->
-
-    <main class="main-content">
-      <div id="image-container">
-        <img src="../images/bcu_building2.jpg" alt="" id="background" />
+    <main class="main-content" role="main">
+      <div id="image-container" aria-hidden="true">
+        <img src="../images/bcu_building2.jpg" alt="Bicol University Campus Building" id="background" />
       </div>
-      <h2>Dashboard</h2>
-      <div class="container text-center">
+      <h1 class="display-6 mb-4">Dashboard</h1>
+      <div class="container-fluid">
         <!-- STATISTICS -->
-        <div class="row mb-5">
-          <div class="col">
+        <section class="row mb-5" aria-labelledby="statistics-heading">
+          <div class="col-12">
             <div class="card">
+              <div class="card-header">
+                <h2 id="statistics-heading" class="h4 mb-0">Library Statistics</h2>
+              </div>
               <div class="card-body">
-                <div class="card-title">
-                  <h4>Stats</h4>
-                </div>
-                <hr />
-                <div class="row mb-3">
-                  <div class="col">
-                    <div class="card">
-                      <div
-                        class="card-body d-flex justify-content-between align-items-center"
-                      >
-                        <h5>Total Books</h5>
-                        <h5 id="totalBooks">0</h5>
+                <div class="row g-4">
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card stats-card text-center">
+                      <div class="card-body">
+                        <h3 class="h6 text-uppercase fw-bold mb-2">Total Books</h3>
+                        <p class="display-4 mb-0" id="totalBooks" aria-live="polite">0</p>
                       </div>
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="card">
-                      <div
-                        class="card-body d-flex justify-content-between align-items-center"
-                      >
-                        <h5>Borrowed Books</h5>
-                        <h5 id="borrowedBooks">0</h5>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card stats-card text-center">
+                      <div class="card-body">
+                        <h3 class="h6 text-uppercase fw-bold mb-2">Borrowed Books</h3>
+                        <p class="display-4 mb-0" id="borrowedBooks" aria-live="polite">0</p>
                       </div>
                     </div>
                   </div>
-                </div>
-
-                <div class="row">
-                  <div class="col">
-                    <div class="card">
-                      <div
-                        class="card-body d-flex justify-content-between align-items-center"
-                      >
-                        <h5>Overdue Books</h5>
-                        <h5 id="overdueBooks">0</h5>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card stats-card text-center">
+                      <div class="card-body">
+                        <h3 class="h6 text-uppercase fw-bold mb-2">Overdue Books</h3>
+                        <p class="display-4 mb-0" id="overdueBooks" aria-live="polite">0</p>
                       </div>
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="card">
-                      <div
-                        class="card-body d-flex justify-content-between align-items-center"
-                      >
-                        <h5>Active Students</h5>
-                        <h5 id="activeStudents">0</h5>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card stats-card text-center">
+                      <div class="card-body">
+                        <h3 class="h6 text-uppercase fw-bold mb-2">Active Students</h3>
+                        <p class="display-4 mb-0" id="activeStudents" aria-live="polite">0</p>
                       </div>
                     </div>
                   </div>
@@ -171,85 +159,95 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- NOTIFICATIONS -->
-        <div class="row mb-5">
-          <div class="col">
+        </section>
+        <!-- NOTIFICATIONS AND ACTIVITIES -->
+        <section class="row mb-5" aria-labelledby="notifications-heading">
+          <div class="col-12 col-lg-6">
             <div class="card">
+              <div class="card-header">
+                <h2 id="notifications-heading" class="h4 mb-0">
+                  <i class="bi bi-bell-fill me-2" aria-hidden="true"></i>
+                  Notifications
+                </h2>
+              </div>
               <div class="card-body">
-                <div class="card-title">
-                  <h4>Notifications</h4>
-                </div>
-                <hr />
-                <div class="card-body">
-                  <p><--Overdue books will show here--></p>
+                <div class="alert alert-info" role="status">
+                  <i class="bi bi-info-circle-fill me-2" aria-hidden="true"></i>
+                  <span id="notification-content">Loading notifications...</span>
                 </div>
               </div>
             </div>
           </div>
           <!-- RECENT ACTIVITIES -->
-          <div class="col">
+          <div class="col-12 col-lg-6">
             <div class="card">
+              <div class="card-header">
+                <h2 id="activities-heading" class="h4 mb-0">
+                  <i class="bi bi-clock-history me-2" aria-hidden="true"></i>
+                  Recent Activity
+                </h2>
+              </div>
               <div class="card-body">
-                <div class="card-title">
-                  <h4>Recent Activity</h4>
-                </div>
-                <hr />
-                <div class="card-body">
-                  <p><--Recent transactions will show here--></p>
+                <div class="activity-list" id="recent-activities" aria-live="polite">
+                  <p class="text-muted">Loading recent activities...</p>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </section>
         <!-- QUICK ACTIONS -->
-        <div class="row justify-content-end">
-          <div class="col-6 flex-md-end">
+        <section class="row justify-content-end" aria-labelledby="actions-heading">
+          <div class="col-12 col-md-8 col-lg-6">
             <div class="card">
+              <div class="card-header">
+                <h2 id="actions-heading" class="h4 mb-0">
+                  <i class="bi bi-lightning-fill me-2" aria-hidden="true"></i>
+                  Quick Actions
+                </h2>
+              </div>
               <div class="card-body">
-                <div class="card-title">
-                  <h4>Quick Actions</h4>
-                </div>
-                <hr />
-                <div class="d-grid gap-2">
-                  <div class="d-grid gap-2 d-md-block">
-                    <button
-                      onclick="window.location.href = 'bookshelf-books.html?modal=addBookContent'"
-                      role="button"
-                      class="col btn btn-primary btn-sm"
-                    >
+                <div class="row g-3">
+                  <div class="col-12 col-sm-6">
+                    <a href="bookshelf-books.html?modal=addBookContent" 
+                       class="btn btn-primary w-100" 
+                       role="button"
+                       aria-label="Add new books to the library">
+                      <i class="bi bi-plus-circle me-2" aria-hidden="true"></i>
                       Add Books
-                    </button>
-                    <button
-                      class="col btn btn-primary btn-sm"
-                      type="button"
-                      id="archiveBookBtn"
-                    >
+                    </a>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <button type="button" 
+                            class="btn btn-outline-primary w-100" 
+                            id="archiveBookBtn"
+                            aria-label="Archive books from the library">
+                      <i class="bi bi-archive me-2" aria-hidden="true"></i>
                       Archive Books
                     </button>
                   </div>
-                  <div class="d-grid gap-2 d-md-block">
-                    <button
-                      onclick="window.location.href = 'students.html?modal=addStudentContent'"
-                      class="col btn btn-primary btn-sm"
-                      role="button"
-                      id="addStudentRecordBtn"
-                    >
-                      Add a Student Record
-                    </button>
-                    <a
-                      href="./transactions.html"
-                      role="button"
-                      class="col btn btn-primary btn-sm"
-                    >
-                      Transactions
+                  <div class="col-12 col-sm-6">
+                    <a href="students.html?modal=addStudentContent" 
+                       class="btn btn-info w-100" 
+                       role="button"
+                       aria-label="Add new student record">
+                      <i class="bi bi-person-plus me-2" aria-hidden="true"></i>
+                      Add Student Record
+                    </a>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <a href="transaction_library.html" 
+                       class="btn btn-outline-secondary w-100" 
+                       role="button"
+                       aria-label="View library transactions">
+                      <i class="bi bi-list-ul me-2" aria-hidden="true"></i>
+                      View Transactions
                     </a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </section>
       </div>
     </main>
 
