--- a/resources/html/bookshelf-copies.html
+++ b/resources/html/bookshelf-copies.html
@@ -148,6 +148,7 @@
     <script src="../js/database-connection.js"></script>
     <script src="../js/create-table.js"></script>
     <script src="../js/database-operations.js"></script>
+    <script src="../js/auth.js"></script>
     <script src="../js/frontend-operations.js"></script>
     <script src="../js/library-operations.js"></script>
     <script src="../js/filter.js"></script>
