--- a/resources/html/students.html
+++ b/resources/html/students.html
@@ -149,7 +149,7 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body">
+          <div class="modal-body">
               <div class="input-group input-group-sm mb-3">
                 <span class="input-group-text">Student ID</span>
                 <input
@@ -167,6 +167,16 @@
                   class="form-control"
                   required
                 />
+              </div>
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">Department</span>
+                <select
+                  id="studentDepartmentSelect"
+                  class="form-control"
+                  required
+                >
+                  <option value="">Loading...</option>
+                </select>
               </div>
               <div class="input-group input-group-sm mb-3">
                 <span class="input-group-text">Course</span>
