--- a/resources/html/transactions_borrow.html
+++ b/resources/html/transactions_borrow.html
@@ -97,6 +97,15 @@
           </span>
           <span class="description">Student Page</span>
         </a>
+
+        <!-- Archived Books - Bottom position -->
+        <a class="nav-link mb-3" href="./archived-books.html">
+          <p></p>
+          <span class="icon">
+            <i class="bi bi-archive"></i>
+          </span>
+          <span class="description">Archived Books</span>
+        </a>
       </nav>
     </div>
 
