--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -104,6 +104,15 @@
           </span>
           <span class="description">Student Page</span>
         </a>
+
+        <!-- Archived Books - Bottom position -->
+        <a class="nav-link mb-3" href="./archived-books.html">
+          <p></p>
+          <span class="icon">
+            <i class="bi bi-archive"></i>
+          </span>
+          <span class="description">Archived Books</span>
+        </a>
       </nav>
     </div>
 
@@ -242,6 +251,15 @@
                       <i class="bi bi-list-ul me-2" aria-hidden="true"></i>
                       View Transactions
                     </a>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <button type="button"
+                            class="btn btn-outline-dark w-100"
+                            id="openDbFolderBtn"
+                            aria-label="Open database folder">
+                      <i class="bi bi-folder2-open me-2" aria-hidden="true"></i>
+                      Open Database Folder
+                    </button>
                   </div>
                 </div>
               </div>
